spacing fix

--- a/003-profile/styles/profile.css
+++ b/003-profile/styles/profile.css
@@ -82,6 +82,7 @@ h3 {
   font-size: 22px;
   padding-top: 12px;
   border-bottom: solid 1px black;
+  margin-bottom: 6px;
   width: 280px;
 }
 
